--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,3 +1,8 @@
 <h1>Periphery</h1>
 
-<% binding.pry %>
+<form>
+  <input type='text' ng-model='searchCompany.name'>
+</form>
+
+{{searchCompany.name}}
+<%# binding.pry %>
