Adds some basic styling

--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Periphery</h1>
+<h1 class='text-center'>Periphery</h1>
 
-<form>
-  <input type='text' ng-model='searchCompany.name'>
+<form class='row'>
+  <input type='text' placeholder='Enter a startup' ng-model='searchCompany.name'>
 </form>
 
 {{searchCompany.name}}
