--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,12 +1,23 @@
 <h1 class='text-center'>Periphery</h1>
 
-<div ng-controller='RelationsCtrl'>
-  <form class='row'>
-    <input type='text' placeholder='Enter a startup' ng-model='searchCompany.name'>
-  </form>
-</div>
+  <div ng-controller='RelationsCtrl'>
+    <form>
+      <div class='row'>
+        <input type='text' placeholder='Enter a startup' ng-model='searchCompany.name'>
+      </div>
+      <div class='row'>
+        <input type='submit' value='Search' class='button large-offset-5'>
+      </div>
+    </form>
 
-<div class='row'>
-  <p>{{searchCompany.name}}</p>
-</div>
+    <ul>
+      <div class='row'>
+        <li ng-repeat='relation in relations'>
+          {{relation.name}}
+        </li>
+      </div>
+    </ul>
+  </div>
+
+
 <%# binding.pry %>
