--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,9 +1,9 @@
 <h1 class='text-center'>Periphery</h1>
 
-  <div ng-controller='RelationsCtrl'>
+  <div>  <!--ng-controller='RelationsCtrl'-->
     <form>
       <div class='row'>
-        <input type='text' placeholder='Enter a startup' ng-model='searchCompany.name'>
+        <input type='text' placeholder='Enter a startup'> <!--ng-model='searchCompany.name'-->
       </div>
       <div class='row'>
         <input type='submit' value='Search' class='button large-offset-5'>
@@ -12,9 +12,9 @@
 
     <ul>
       <div class='row'>
-        <li ng-repeat='relation in relations'>
+        <!--li ng-repeat='relation in relations'>
           {{relation.name}}
-        </li>
+        </li-->
       </div>
     </ul>
   </div>
