--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class='text-center'>Periphery</h1>
 
 <div class='row'>
-  <%= form_tag(search_path, method: "get") do %>
+  <%= form_tag(search_path, method: "get", remote: true) do %>
     <%= text_field_tag 'search', nil, placeholder: "Enter the name of a startup here" %>
     <%= submit_tag "Search", name: nil, class: "button" %>
   <% end %>
