--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,6 @@
 <div class='row'>
   <%= form_tag(search_path, method: "get", remote: true) do %>
     <%= text_field_tag 'search', nil, placeholder: "Enter the name of a startup here" %>
-    <%= submit_tag "Search", name: nil, class: "button" %>
+    <%= submit_tag "Search", name: nil, class: "search button" %>
   <% end %>
 </div>
