Rendering results multiple times asynchronously...troubleshooting

--- a/app/views/main/search.js.erb
+++ b/app/views/main/search.js.erb
@@ -1,5 +1,5 @@
 $(function () {
   $('.search.button').click(function () {
-    alert('clicked');
+    $('div.search_results').append('<%= @company %>');
   });  
 });
