Lines up persons of interest divs horizontally on page

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.gridlet {
+  // display: inline-block;
+  float: left;
+  height: 352px;
+  width: 252px;
+  border: 1px solid #ffdffd;
+  text-align: center;
+  // margin-top: 0;
+}
+
+img {
+
+}
