--- a/app/views/main/search.html.erb
+++ b/app/views/main/search.html.erb
@@ -1,8 +1,8 @@
 <div class='row'><p><%= @company.name %></p></div>
 <div class='row'><%= (@company.overview.match(/(<p>.*?\.)\W/)[-1] + '</p>').html_safe %></div>
 <% @peeps.each do |peep| %>
-  <div class='row'>
-    <%= "#{peep.first_name} #{peep.last_name}" %>
+  <div class='gridlet row'>
+    <p><%= "#{peep.first_name} #{peep.last_name}" %></p>
     <img src=<%= "http://www.crunchbase.com/#{peep.image.sizes[1].url unless peep.image.blank?}" %>> <!-- need to find image url -->
   </div>
 <% end %> 
