--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,14 +1,19 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.gridlet {
-  // display: inline-block;
-  float: left;
+// .gridlet {
+//   // display: inline-block;
+//   float: left;
+//   height: 365px;/*352px;*/
+//   width: 365px;/*252px;*/
+//   border: 1px solid #ffdffd;
+//   text-align: center;
+//   // margin-top: 0;
+// }
+
+li.th {
   height: 352px;
-  width: 252px;
-  border: 1px solid #ffdffd;
   text-align: center;
-  // margin-top: 0;
 }
 
 img {
