--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
       <% end %>
     </div>
 
+
+    <h4 class='alert'><%= flash[:alert] %></h4>
+
     <%= yield %>
     <%= javascript_include_tag "application" %>
   </body>
