Allows for API calls to be made during search and saves to DB for later use

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -20,7 +20,7 @@ li.th {
   width: 252px;
   margin: 1px;
   text-align: center;
-  overflow: scroll;
+  // overflow: scroll;
   position: relative;
 }
 
