--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -15,6 +15,24 @@ body {
   margin: 0 auto;
 }
 
+.flip {
+  -webkit-perspective: 800;
+  height: 365px;
+  width: 252px;
+  position: relative;
+}
+
+.flip .card.flipped {
+  -webkit-transform: rotatey(-180deg);
+}
+
+.flip .card {
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: 0.5s;
+}
+
 li.th {
   height: 365px;
   width: 252px;
