--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -33,6 +33,25 @@ body {
   -webkit-transition: 0.5s;
 }
 
+.flip .card .face {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-backface-visibility: hidden ;
+  z-index: 2;
+    // font-family: Georgia;
+    // font-size: 3em;
+    text-align: center;
+    // line-height: 200px;
+}
+.flip .card .front {
+  position: absolute;
+  z-index: 1;
+  // background: black;
+    // color: white;
+    cursor: pointer;
+}
+
 li.th {
   height: 365px;
   width: 252px;
