--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -20,9 +20,9 @@
               <% end %>
             </div>
           </div>
-          <!--  <div class='back face'>
+          <div class='back face'>
             <h3>Back</h3>
-          </div> -->
+          </div>
         </div>
       </li>
 
