Links not opening correctly — seems that onclick flip animation is interfering

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -16,8 +16,8 @@ li.th {
 
 .flip {
   -webkit-perspective: 800;
-  height: 365px;
-  width: 252px;
+  // height: 365px;
+  // width: 252px;
   position: relative;
 }
 
