--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -5,10 +5,10 @@
   <ul class='large-block-grid-4'>
     <% @people.each do |person| %>
       <li class='th flip'>
-        <div class='card'>
+        <div class='th card'>
           <div class='front face'>
             <a href="<%= person.homepage_url.blank? ? "http://www.crunchbase.com/person/#{person.permalink}" : person.homepage_url %>" target="_blank">
-              <h5><%= "#{person.first_name} #{person.last_name}" %></h5>
+            <h5><%= "#{person.first_name} #{person.last_name}" %></h5>
             </a>
             <img src=<%= person.image.blank? ? 'assets/Portrait_placeholder.png' : "http://www.crunchbase.com/#{person.image.sizes[1].url}" %>>
             <div class='title-twitter'>
