--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -21,7 +21,8 @@
             </div>
           </div>
           <div class='back face'>
-            <h3>Back</h3>
+            <!-- <h3>Back</h3> -->
+            <%= person.overview.html_safe unless person.overview.blank? %>
           </div>
         </div>
       </li>
