--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class='back face'>
             <!-- <h3>Back</h3> -->
-            <%= person.overview.html_safe unless person.overview.blank? %>
+            <%= person.overview.gsub('<p>','<h6>').gsub('</p>', '</h6>').html_safe unless person.overview.blank? %>
           </div>
         </div>
       </li>
