Moves hx tags outside of a tags to prevent links from spanning the entire width of the card

--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -7,22 +7,22 @@
       <li class='th flip'>
         <div class='th card'>
           <div class='front face'>
-            <a href="<%= person.homepage_url.blank? ? "http://www.crunchbase.com/person/#{person.permalink}" : person.homepage_url %>" target="_blank">
-            <h5><%= "#{person.first_name} #{person.last_name}" %></h5>
-            </a>
+            <h5><a href="<%= person.homepage_url.blank? ? "http://www.crunchbase.com/person/#{person.permalink}" : person.homepage_url %>" target="_blank">
+            <%= "#{person.first_name} #{person.last_name}" %>
+            </a></h5>
             <img src=<%= person.image.blank? ? 'assets/Portrait_placeholder.png' : "http://www.crunchbase.com/#{person.image.sizes[1].url}" %>>
             <div class='title-twitter'>
               <h6><%= person.relationships.select {|p| p.firm_permalink == @company.permalink}.first.title unless person.relationships.select {|p| p.firm_permalink == @company.permalink}.first.blank? %></h6>
               <% if person.twitter_username %>
-                <a href=<%= "https://twitter.com/#{person.twitter_username}" %> target="_blank">
-                  <h6><%= "@#{person.twitter_username}" unless person.twitter_username.blank? %></h6>
-                </a>
+                <h6><a href=<%= "https://twitter.com/#{person.twitter_username}" %> target="_blank">
+                  <%= "@#{person.twitter_username}" unless person.twitter_username.blank? %>
+                </a></h6>
               <% end %>
               <% linkedin = person.web_presences.select { |h| h['title'] == "LinkedIn" } %>
               <% unless linkedin.blank? %>
-                <a href=<%= linkedin.first['external_url'] %>>
-                  <h6>LinkedIn</h6>
-                </a>
+                <h6><a href=<%= linkedin.first['external_url'] %>>
+                  LinkedIn
+                </a></h6>
               <% end %>
             </div>
           </div>
