--- a/app/views/main/_company.html.erb
+++ b/app/views/main/_company.html.erb
@@ -1,6 +1,6 @@
 <div class='row'>
   <% unless @company.homepage_url.blank? %>
-    <a href=<%= @company.homepage_url %>><h3><%= @company.name %></h3></a>
+    <h3><a href=<%= @company.homepage_url %>><%= @company.name %></a></h3>
   <% else %>
     <h3><%= @company.name %></h3>
   <% end %>
