Adds one more TODO to people view

--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -1,5 +1,6 @@
 <!-- TODO; create methods in model to try and clean up all this nil logic seeping into the view OR create partials for the more complex view logic -->
 <!-- TODO; switch out <a> tags with link_to's -->
+<!-- TODO; handle partial links in person overview that are meant to originate from www.crunchbase.com -- currently results in routing errors because it assumes they are originating from www.periphery.in -->
 
 <div class='row'>
   <ul class='large-block-grid-4'>
