--- a/app/views/main/_people.html.erb
+++ b/app/views/main/_people.html.erb
@@ -11,7 +11,7 @@
             <h5><a href="<%= person.homepage_url.blank? ? "http://www.crunchbase.com/person/#{person.permalink}" : person.homepage_url %>" target="_blank">
             <%= "#{person.first_name} #{person.last_name}" %>
             </a></h5>
-            <img src=<%= person.image.blank? ? 'assets/Portrait_placeholder.png' : "http://www.crunchbase.com/#{person.image.sizes[1].url}" %>>
+            <img src=<%= person.image.blank? ? 'assets/Portrait_placeholder.png' : person.image.sizes[1].url %>>
             <div class='title-twitter'>
               <h6><%= person.relationships.select {|p| p.firm_permalink == @company.permalink}.first.title unless person.relationships.select {|p| p.firm_permalink == @company.permalink}.first.blank? %></h6>
               <% if person.twitter_username %>
